After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681335 - [0.11] flacparse: missing streamheader in push mode
[0.11] flacparse: missing streamheader in push mode
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.11.x
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-06 20:51 UTC by Tim-Philipp Müller
Modified: 2012-08-07 10:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tim-Philipp Müller 2012-08-06 20:51:26 UTC
$ gst-launch-1.0 -v playbin uri=http://samplemedia.linaro.org/Audio/big_buck_bunny_FLAC_2Channel_48k_561K_short.FLAC

gst_flac_parse_handle_frame: fLaC marker found
gst_flac_parse_handle_frame: Found metadata block of size 38
gst_flac_parse_parse_frame: Handling metadata block of type 0
gst_flac_parse_handle_streaminfo: STREAMINFO:
	min/max blocksize: 4608/4608,
	min/max framesize: 3571/6922,
	samplerate: 48000,
	channels: 2,
	bits per sample: 16,
	total samples: 192000
gst_flac_parse_handle_headers: missing header 0xe5b770 0xe5baa0 (nil), muxing into container formats may be broken
gst_flac_dec_start:<flacdec0> initializing decoder
flacparse0.GstPad:src: caps = audio/x-flac, channels=(int)2, framed=(boolean)true, rate=(int)48000
gst_flac_dec_set_format:> sink caps: audio/x-flac, channels=(int)2, framed=(boolean)true, rate=(int)48000
gst_flac_dec_set_format: no 'streamheader' field in input caps, try adding a flacparse element upstream
ERROR: from element flacdec0: Internal GStreamer error: negotiation problem.
gstaudiodecoder.c(1561): gst_audio_decoder_chain (): flacdec0:
decoder not initialized
Comment 1 Mark Nauwelaerts 2012-08-07 10:29:29 UTC
commit 2d179ebf9030f0fa906d4a230cd48d22f83d000b
Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk>
Date:   Tue Aug 7 12:12:09 2012 +0200

    flacparse: generate empty vorbiscomment for complete streamheaders if needed
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=681335