flacparse: generate empty vorbiscomment for complete streamheaders if needed

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=681335